# lexicon-python

./: .gitignore  README.md  pyproject.toml
.cursor/commands/: lexicon-library-fix.md
.cursor/skills/lexicon-library-fix-agent/: SKILL.md
.notes/: genres.json  genres.txt  genres_beatport.json  genres_beatport_alias.json  genres_table.html  parse_genres_html.py
docs/: CLI.md  api-issues.md
scripts/genre_taxonomy/: genre_aliases.json  genre_cleanup.py  infer_genres_from_artists.py
scripts/genre_taxonomy/output-v1/: bulk_update_genre_native_field.json  export.json  genre_backup_bulk_update.json  genre_inventory.json  taxonomy_paths.json  tracks_missing_genre.json  uncertain_genres.json
scripts/genre_taxonomy/output-v1/batches/: Genre_Ambient_downtempo.json  Genre_Bass.json  Genre_Disco_funk.json  Genre_Electro.json  Genre_Hip_Hop.json  Genre_House.json  Genre_Pop.json  Genre_R_B.json  Genre_Techno.json  all_confident.json  smoke.json
src/lexicon/: cli.py
src/lexicon/cli/: __init__.py  app.py  formatting.py  logging_setup.py  prompts.py  tag_utils.py
src/lexicon/cli/commands/: __init__.py  fields.py  tags.py  tracks.py
src/lexicon/resources/: tracks.py  tracks_types.py
tests/: test_cli.py  test_featured_artist_normalize.py  test_infer_genres_from_artists.py  test_tracks.py
tests/cli/: test_formatting.py  test_prompts.py  test_tag_utils.py
tests/cli/commands/: test_fields.py  test_tags.py  test_tracks.py
