[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexicon-python"
version = "0.2.0"
description = "Python client for the Lexicon DJ API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  {name = "Garrison Burger", email = "burgerga123@gmail.com"}
]
dependencies = [
  "InquirerPy>=0.3",
  "requests>=2.31",
  "typing_extensions>=4.0",
  "typer>=0.9"
]

[project.urls]
Homepage = "https://github.com/photonicvelocity/lexicon-python"

[project.scripts]
lexicon = "lexicon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
