[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexicon-python"
version = "0.2.0"
description = "Python client for the Lexicon DJ API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  {name = "Garrison Burger", email = "burgerga123@gmail.com"}
]
dependencies = [
  "InquirerPy>=0.3",
  "requests>=2.31",
  "typing_extensions>=4.0",
  "typer>=0.9"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipython>=8.12.3",
]

[project.urls]
Homepage = "https://github.com/photonicvelocity/lexicon-python"

[project.scripts]
lexicon = "lexicon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
# Dev dependencies are specified in [dependency-groups]
default-groups = ["dev"]

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
